--- a/src/main/resources/templates/readingList.html
+++ b/src/main/resources/templates/readingList.html
@@ -17,10 +17,9 @@
             (ISBN: <span th:text="${book.isbn}">ISBN</span>)
         </dt>
         <dd class="bookDescription">
-<span th:if="${book.description}"
-      th:text="${book.description}">Description</span>
-<span th:if="${book.description eq null}">
-No description available</span>
+            <span th:if="${book.description}"
+                  th:text="${book.description}">Description</span>
+            <span th:if="${book.description eq null}">No description available</span>
         </dd>
     </dl>
 </div>
@@ -31,14 +30,14 @@ No description available</span>
 <h3>Add a book</h3>
 <form method="POST">
     <label for="title">Title:</label>
-    <input type="text" name="title" size="50"></input><br/>
+    <input id="title" type="text" name="title" size="50"></input><br/>
     <label for="author">Author:</label>
-    <input type="text" name="author" size="50"></input><br/>
+    <input id="author" type="text" name="author" size="50"></input><br/>
     <label for="isbn">ISBN:</label>
-    <input type="text" name="isbn" size="15"></input><br/>
+    <input id="isbn" type="text" name="isbn" size="15"></input><br/>
     <label for="description">Description:</label><br/>
-<textarea name="description" cols="80" rows="5">
-</textarea><br/>
+    <textarea id="description" name="description" cols="80" rows="5">
+    </textarea><br/>
     <input type="submit"></input>
 </form>
 </body>
